wp-content/themes/paceaux3/style.css
/* ... */
thead th {
    border-bottom-width: var(--borderWidth);
}

tfoot th {
  border-top-width: var(--borderWidth);
}

/* =====
#Table #Rows
===== */
tr {
    background-color: var(--tablePrimaryBgColor);
}

tr:nth-child(even) {
    background-color: var(--tableAlternatingBgColor);
}

 table {
   border-spacing: 0;
   border: 3px solid rgb(193, 193, 193);
   border-collapse: collapse;
   border-color: var(--themeActivePltNHigher);
   font-size: 0.7em;
 }
 
 caption {
   font-size: 1em;
   font-style: italic;
   text-transform: capitalize;
 }
 
 tr {
   transition: background-color 0.3s ease-in-out;
 }
 
 tr:nth-child(even) {
   background: rgba(220, 220, 220, 0.2);
   background: rgba(var(--themeActivePltNHighest), 0.2);
 }
 
 tr:hover {
   background-color: rgba(220, 220, 220, 0.4);
   background-color: rgba(var(--themeActivePltNHighest), 0.4);
 }
 
 th,
 td {
   padding: 0.4em 0.618rem;
   border-width: 0;
   border-style: solid;
   border-color: rgb(193, 193, 193);
   border-color: rgb(var(--themeActivePltNHigher));
   line-height: 1.2;
   line-height: var(--smallLineHeight);
   text-align: left;
   vertical-align: middle;
 }
 
 th,
 td {
   border-left-width: 1px;
 }
 
 th {
   font-size: 1.3em;
   font-size: var(--smallestTitleSize);
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   /* treat th in a body as h4 */
 }
 
 thead th,
 tfoot th {
   font-size: 1.5em;
   font-size: var(--baseTitleSize);
   /* treat th in header/footer as h3 */
 }
 
 thead tr:last-child th,
 thead tr:last-child td {
   border-bottom-width: 2px;
 }
 
 tfoot tr:first-child th,
 thead tr:last-child td {
   border-top-width: 2px;
 }
 
 [contenteditable="true"] {
   display: block;
 }
 
 [contenteditable="true"]:hover {
   outline: 1px dotted var(--themeActiveTrimColor);
 }
 
 [contenteditable="true"]:focus,
 [contenteditable="true"]:active {
   outline: 1px solid var(--themeActiveTrimColor);
 }
 
 table,
 table * {
   box-sizing: border-box;
 }

 /* ===============
     #FORMS 
  =============== */
 input {
   padding: 0.75em 0.75rem;
   border: 1px solid rgb(var(--themeActivePltNHighest));
   color: #767676;
 }
 
 input[type="submit"] {
   padding: 10px 20px;
   border: none;
   border-radius: 3px;
    color: var(--themeActiveTextColor);
   letter-spacing: 1px;
   text-transform: uppercase;
   background: var(--themeActiveTrimColor);
   cursor: pointer;
 }
 
 input.search-submit:hover {
   color: #fff;
   background: rgb(var(--themeActivePltNLower));
 }
 
 input.search-submit:hover {
   color: #fff;
   background: #333;
 }
 
 textarea {
   padding: 14px;
   border: 1px solid #ddd;
 }
 
 select {
   padding: 9px 7px;
   border: 1px solid rgb(var(--themeActivePltNHighest));
   color: #999;
 }
 
 /* === Alignement (WP classes) === */
 .alignleft {
   float: left;
 }
 
 .alignright {
   float: right;
 }
 
 .aligncenter {
   margin: 0 auto;
 }
 
 /**
  * Images
  * --------------------------------------------------------------------------- */
 
 /* === Thumbnails === */
 .thumbnail {
   position: relative;
   display: block;
   max-width: 100%;
   height: auto;
   margin-right: auto;
   margin-left: auto;
 }
 
 /* Top Bar */
 
 .topBar {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   background: var(--themeActiveBGColor);
 }

@media screen and (min-width: 768px) {
    .topBar {
        position: fixed;
        right: 0;
        z-index: 10;
        margin: 0;
    }
}
 
 #top-container {
   position: relative;
   max-width: 1024px;
   margin: 0 auto;
 }
 
 /* Social Networks */
 
 .social {
   float: right;
 }
 
 .social i {
   display: inline-block;
   padding: 0 2px;
   line-height: 40px;
 }
 
 /* ===============
     #LAYOUT 
  =============== */
  body {
    display: grid;
    grid-template-columns: 10% 1fr 10%;
    grid-template-rows: auto auto 1fr;
    grid-template-areas:
        '. header tools'
        '. main .'
        '. footer .';
    min-height: 100vh;
    margin: 0;
  }

  @media screen and (min-width: 768px) {

  }
 
 .layout-1c .pageContainer__contentWrapper {
   width: 100%;
 }
 
 .layout-1c .pageContainer__contentWrapper {
   width: 100%;
 }
 
 .layout-2c-l .pageContainer__contentWrapper {
  flex-grow: 1;
 }
 
 
 @media screen and (min-width: 768px) {
   
  .layout-2c-l .pageContainer__contentWrapper {
     flex-basis: 74%;
   }

   .layout-2c-l .pageContainer__sidebar {
     flex-basis: 26%;
     flex-grow:1
   }

 }
 
 .layout-2c-r .pageContainer__contentWrapper {
   float: right;
   width: 71.666%;
 }
 
 @media screen and (min-width: 768px) {
   .layout-2c-r .pageContainer__sidebar {
     float: left;
     padding-right: 1.5%;
     padding-left: 1.5%;
     width: 25.333%;
   }	
 }
 
 
 .pageContainer__contentWrapper {
   position: relative;
   margin-bottom: 30px;
 }
 
 .pageContainer {
   grid-area: main;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   padding: 0;
   width: 100%;
   background: #fff;
   background: var(--themeActiveBGColor);
 }
 
 .pageContainer__content {
   margin: 0 20px 0 10px;
   border-bottom: 1px solid var(--themeActiveTrimColor);
 }

.pageContainer__content a {
    border-bottom-color: var(--linkColor);
}

.pageContainer__content a:focus {
    border-bottom-style: solid;
}
 
 .pageContainer__sidebar {
   padding-top: 10px;
   background: #f8f8f8;
   background: var(--themeActiveAccentColor);
 }
 
 .pageContainer__sidebar ul {
   padding-left: 0;
   margin: 0 20px 0 0;
 }
 
 .pageContainer__sidebar ul li:before,
 .pageContainer__sidebar[id][id] ul li a {
   color: var(--linkColor);
   font-weight: bold;
 }
 
 /** Article **/
 
 article.colum {
   padding-bottom: 30px;
     margin: .618em 0;
     border-radius: 3px;
     background-color: var(--themeActiveAccentColor);
 }
 
 .entry-header-archive h2.entry-title {
   padding: 0;
   padding-bottom: 10px;
   font-size: 1.6rem;
   font-size: var(--bigTitleSize);
   font-weight: thin;
   letter-spacing: -1px;
 }
/* ... */

